change rule s1698 from CODE_SMELL to BUG

--- a/java-checks/src/main/resources/org/sonar/l10n/java/rules/java/S1698_java.json
+++ b/java-checks/src/main/resources/org/sonar/l10n/java/rules/java/S1698_java.json
@@ -1,6 +1,6 @@
 {
   "title": "\"==\" and \"!=\" should not be used when \"equals\" is overridden",
-  "type": "CODE_SMELL",
+  "type": "BUG",
   "status": "ready",
   "remediation": {
     "func": "Constant\/Issue",
