change rule from CODE_SMELL to BUG

--- a/java-checks/src/main/resources/org/sonar/l10n/java/rules/java/S107_java.json
+++ b/java-checks/src/main/resources/org/sonar/l10n/java/rules/java/S107_java.json
@@ -1,6 +1,6 @@
 {
   "title": "Methods should not have too many parameters",
-  "type": "CODE_SMELL",
+  "type": "BUG",
   "status": "ready",
   "remediation": {
     "func": "Constant\/Issue",
