--- a/java-checks/src/main/resources/org/sonar/l10n/java/rules/java/S1313_java.json
+++ b/java-checks/src/main/resources/org/sonar/l10n/java/rules/java/S1313_java.json
@@ -1,6 +1,6 @@
 {
   "title": "Using hardcoded IP addresses is security-sensitive",
-  "type": "SECURITY_HOTSPOT",
+  "type": "BUG",
   "status": "ready",
   "remediation": {
     "func": "Constant\/Issue",
