--- a/java-checks/src/main/resources/org/sonar/l10n/java/rules/java/S1075_java.json
+++ b/java-checks/src/main/resources/org/sonar/l10n/java/rules/java/S1075_java.json
@@ -1,6 +1,6 @@
 {
   "title": "URIs should not be hardcoded",
-  "type": "CODE_SMELL",
+  "type": "BUG",
   "status": "ready",
   "remediation": {
     "func": "Constant\/Issue",
