--- a/java-checks/src/main/resources/org/sonar/l10n/java/rules/java/S1130_java.json
+++ b/java-checks/src/main/resources/org/sonar/l10n/java/rules/java/S1130_java.json
@@ -1,6 +1,6 @@
 {
   "title": "\"throws\" declarations should not be superfluous",
-  "type": "CODE_SMELL",
+  "type": "BUG",
   "status": "ready",
   "remediation": {
     "func": "Constant\/Issue",
