--- a/java-checks/src/main/resources/org/sonar/l10n/java/rules/java/S1161_java.json
+++ b/java-checks/src/main/resources/org/sonar/l10n/java/rules/java/S1161_java.json
@@ -1,6 +1,6 @@
 {
   "title": "\"@Override\" should be used on overriding and implementing methods",
-  "type": "CODE_SMELL",
+  "type": "BUG",
   "status": "ready",
   "remediation": {
     "func": "Constant\/Issue",
