--- a/java-checks/src/main/resources/org/sonar/l10n/java/rules/java/S8000_java.json
+++ b/java-checks/src/main/resources/org/sonar/l10n/java/rules/java/S8000_java.json
@@ -9,7 +9,7 @@
   "tags": [
 
   ],
-  "defaultSeverity": "Minor",
+  "defaultSeverity": "Major",
   "ruleSpecification": "RSPEC-2676",
   "sqKey": "S8000",
   "scope": "All"
